--- a/StoryToken-app/src/assets/css/main.css
+++ b/StoryToken-app/src/assets/css/main.css
@@ -2788,3 +2788,14 @@ section {
   padding: 10px; 
   margin: 10px;
 }
+
+.token-num {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 5px;
+  font-size: 12px;
+  z-index: 1;
+}
